fixed website bugs

--- a/analysis.html
+++ b/analysis.html
@@ -69,7 +69,7 @@
               <div class="carousel-item">
                   <img class="d-block w-100" src="./images/Slide9.jpg" alt="Sixth slide">
                 </div>
-                <div class="carousel-item"
+                <div class="carousel-item">
                     <img class="d-block w-100" src="./images/Slide10.jpg" alt="Seventh slide">
                   </div>
 
