--- a/team.html
+++ b/team.html
@@ -25,10 +25,10 @@
           margin-bottom: 10px;
 
       }
-      video {
-        height: 1000px;
-        width: 2000px;
-      }
+      /* video { */
+        /* height: 1000px; */
+        /* width: 2000px; */
+      /* } */
       nav{
         font-size: 30px;
       }
@@ -50,12 +50,13 @@
       </nav>
       <p>Contact Us with any questions at bridgeupstem@amnh.org</p>
 
-      <img src="images/team9.jpeg" alt="Intern pic in museum">
+      <img style="width:500px;"src="images/team9.jpeg" alt="Intern pic in museum">
 
-      <img src="images/team1.png" alt="Team pic on zoom screen, 6 interns, 1 mentor">
+      <img style="width:500px;"src="images/team1.png" alt="Team pic on zoom screen, 6 interns, 1 mentor">
 
-      <img src="images/team17.png" alt="sitting in perkin room">
+      <img style="width:600px;height:300px;" src="images/team17.png" alt="sitting in perkin room">
 
-      <video src="images/IMG_3771.MOV">hearts video</video>
+      <video width="900px" height='450px'controls>
+        <source src="images/IMG_3771.MOV" type='video/mp4'>hearts video</video>
 </body>
 </html>
