fixed some styles and typos for website

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=10.0">
     <header>
-      <h1 style="text-align:center" > Welcome to the Escape Earth Project</h1>
+      <h1 > Welcome to the Escape Earth Project</h1>
       <img src= "images/tess.png" alt= "Tess Picture">
     </header>
     <style>
 
         header {
         background-color: rgb(94, 120, 238);
-        padding-left: 500px;
-        /*padding-left: 500px;*/
+        /* padding-left: 25%; */
+        /* padding-left: 500px; */
         }
+
         body {
         background-color: rgb(186, 197, 248);
         }
@@ -21,7 +22,18 @@
             height: 300px;
             width: 450px;
             margin-bottom: 10px;
-
+        }
+        header h1{
+          /* margin-left: auto; */
+          /* margin-right: auto; */
+          /* width: 40em; */
+          text-align: center;
+        }
+        header img {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          /* width: 40em; */
         }
     </style>
 </head>
