--- a/tess.html
+++ b/tess.html
@@ -85,7 +85,18 @@
             </p>
         </div>
     </div>
-
+    <div class="lc_examples">
+      <div class = "lc1">
+        <img src="images/lc_ex1.png" alt="Light curve example with a transit">
+      </div>
+      
+      <div class="lc2">
+        <img src="images/lc-ex2.png" alt="Light curve example">
+      </div>
+      <p class="lcp">
+        The data TESS collects are called light curves, and here are some examples. A light curve is the flux (i.e. brightness) of a star measured over a period of time. The flux can vary depending on how magnetically active a star is or if objects are orbiting the star. Most modulations are due to starspots on the stellar surface, but the example on the left also shows a transit. A transit is a brief dip in the stellar flux as an object orbits in front of the star from our line of sight.
+      </p>
+    </div>
 </body>
 <!-- <div>
   <footer>
