--- a/analysis.html
+++ b/analysis.html
@@ -55,10 +55,10 @@
         <img class="d-block w-100" src="./images/Slide4.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-          <img class="d-block w-100" src="./images/Slide5.jpg" alt="Second slide">
+          <img class="d-block w-100" src="./images/Slide5.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="./images/Slide6.jpg" alt="Third slide">
+            <img class="d-block w-100" src="./images/Slide6.png" alt="Third slide">
           </div>
           <div class="carousel-item">
               <img class="d-block w-100" src="./images/Slide7.jpg" alt="Fourth slide">
