--- a/team.html
+++ b/team.html
@@ -6,15 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Team</title>
   <header>
-    <h1 style="padding-left: 100px" >Escape Earth Team</h1>
+    <h1  >Escape Earth Team    </h1>
     <img src= "images/tess.png" alt= "Tess Picture">
   </header>
   <style>
 
       header {
       background-color: rgb(94, 120, 238);
-      padding-left: 50%;
+      /* padding-left: 50%; */
       /*padding-left: 500px;*/
+      margin-top: -20px;
       }
       body {
       background-color: rgb(186, 197, 248);
@@ -36,6 +37,16 @@
         font-size: 30px;
         font-style: bold;
       }
+      header h1 {
+        padding-top: 15px;
+        text-align: center;
+        
+      }
+      header img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
   </style>
 </head>
 <body>
@@ -49,12 +60,15 @@
             <a href="team.html">Team </a>
       </nav>
       <p>Contact Us with any questions at bridgeupstem@amnh.org</p>
+      <p>Also check out our code for this project on our <a href="https://github.com/deerow22/EscapeEarth">GitHub Repository</a></p>
 
       <img style="width:500px;"src="images/team9.jpeg" alt="Intern pic in museum">
 
       <img style="width:500px;"src="images/team1.png" alt="Team pic on zoom screen, 6 interns, 1 mentor">
 
       <img style="width:600px;height:300px;" src="images/team17.png" alt="sitting in perkin room">
+
+      <img style="width:500px;" src="images/team2.png" alt="Team pic on zoom screen, 6 interns, 1 mentor, matching virtual backgrounds">
 
       <video width="900px" height='450px'controls>
         <source src="images/IMG_3771.MOV" type='video/mp4'>hearts video</video>
